--- a/q01/Makefile
+++ b/q01/Makefile
@@ -1,4 +1,5 @@
-calculo_quadrilatero: main.o calculos_quadrilatero.o
-	gcc $(CFLAGS) -o calculo_quadrilatero main.o calculos_quadrilatero.o
+calculo_quadrilatero: main.o calculos_quadrilatero.o io_functions.o
+	gcc $(CFLAGS) -o calculo_quadrilatero main.o calculos_quadrilatero.o io_functions.o
 
 main.o: main.c 
+	gcc $(CFLAGS) -c main.c
