Updating solution to trabalho04

--- a/trabalho04/c/Makefile
+++ b/trabalho04/c/Makefile
@@ -1,14 +1,11 @@
-exe: libseno.so main.o
-	gcc -o exe main.o -L. -lseno -Wl,-rpath,-Wl,-rpath='${ORIGIN}'
+exe: main.o libseno.so
+	gcc -o exe main.c -ldl
 
 libseno.so: libseno.o
 	gcc -shared -fPIC -o libseno.so libseno.o
 
 libseno.o: libseno.c
 	gcc -c -fPIC libseno.c
-
-main.o:
-	gcc $(CFLAGS) -c main.c
 
 clean:
 	rm -f *.o exe
